# tokf

./: .dockerignore  .dupes-ignore.toml  .env.example  .gitignore  .release-please-config.json  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEPLOY.md  Dockerfile  LICENSE  README.md  dupes.toml  fly.toml  justfile  tokf-implementation-spec.md
crates/e2e-tests/: Cargo.toml
crates/e2e-tests/src/: lib.rs
crates/e2e-tests/tests/: auth_flow.rs  gain_flow.rs  machine_flow.rs  publish_flow.rs  rate_limit_flow.rs  stdlib_publish_flow.rs  sync_flow.rs
crates/e2e-tests/tests/harness/: mod.rs
crates/tokf-cli/: CHANGELOG.md  Cargo.toml
crates/tokf-cli/filters/: ls.toml  playwright.toml  pytest.toml  tsc.toml  vue-tsc.toml
crates/tokf-cli/filters/cargo/: build.toml  check.toml  clippy.toml  fmt.toml  install.toml  nextest.toml  test.toml
crates/tokf-cli/filters/docker/: build.toml  compose.toml  images.toml  ps.toml
crates/tokf-cli/filters/eslint/: check.toml
crates/tokf-cli/filters/firebase/: deploy.toml
crates/tokf-cli/filters/git/: add.toml  commit.toml  diff-name-list.toml  diff.toml  log-name-list.toml  log.toml  push.toml  show.toml  status.toml
crates/tokf-cli/filters/go/: build.toml  test.toml  vet.toml
crates/tokf-cli/filters/gradle/: build.toml  dependencies.toml  test.toml
crates/tokf-cli/filters/ls_test/: success.toml
crates/tokf-cli/filters/next/: build.toml
crates/tokf-cli/filters/npm/: run.toml  test-jest.toml  test-vitest.toml  test.toml
crates/tokf-cli/filters/playwright_test/: failure.toml  failure.txt  success.toml  success.txt
crates/tokf-cli/filters/pnpm/: add.toml  install.toml
crates/tokf-cli/filters/prettier/: check.toml
crates/tokf-cli/filters/prisma/: generate.toml
crates/tokf-cli/filters/pytest_test/: collect_error.toml  decoy.toml  decoy.txt  err.txt  failure.toml  failure.txt  success.toml  success.txt
crates/tokf-cli/filters/ruff/: check.toml  format.toml
crates/tokf-cli/filters/tsc_test/: success.toml
crates/tokf-cli/filters/vite/: build.toml
crates/tokf-cli/filters/vue-tsc_test/: failure.toml  failure.txt  no_errors_message.toml  success.toml
crates/tokf-cli/skills/codex-discover/: SKILL.md
crates/tokf-cli/skills/codex-run/: SKILL.md
crates/tokf-cli/skills/tokf-filter/: SKILL.md
crates/tokf-cli/src/: auth_cmd.rs  backfill_cmd.rs  baseline.rs  cache_cmd.rs  cli_args.rs  commands.rs  completions_cmd.rs  config_cmd.rs  discover_cmd.rs  doctor_cmd.rs  eject_cmd.rs  fs.rs  gain.rs  history_cmd.rs  info_cmd.rs  install_cmd.rs  lib.rs  main.rs  marker.rs  output.rs  paths.rs  publish_cmd.rs  publish_shared.rs  publish_stdlib_cmd.rs  remote_cmd.rs  resolve.rs  runner.rs  search_cmd.rs  setup_cmd.rs  shell.rs  show_cmd.rs  skill.rs  suite_discovery.rs  sync_cmd.rs  sync_core.rs  telemetry_cmd.rs  verify_cmd.rs  which_cmd.rs
crates/tokf-cli/src/auth/: client.rs  credentials.rs
crates/tokf-cli/src/config/: cache.rs  local_wrapper.rs  mod.rs  tests.rs  tests_basename.rs  tests_discovery.rs  tests_local_wrapper.rs  tests_matching.rs  types.rs  variant.rs
crates/tokf-cli/src/discover/: mod.rs  parser.rs  tests.rs  types.rs
crates/tokf-cli/src/doctor/: mod.rs  noise.rs  tests.rs
crates/tokf-cli/src/filter/: aggregate.rs  cleanup.rs  group.rs  match_output.rs  mod.rs  parse.rs  section.rs  template.rs  tests.rs  tests_color.rs  tests_pipeline.rs
crates/tokf-cli/src/gain_render/: mod.rs  tests.rs
crates/tokf-cli/src/generic/: err.rs  mod.rs  patterns.rs  summary.rs  test_run.rs
crates/tokf-cli/src/history/: config.rs  config_tests.rs  mod.rs  queries.rs  tests.rs  tests_clear.rs  tests_search.rs  types.rs
crates/tokf-cli/src/hook/: aider.rs  cline.rs  codex.rs  copilot.rs  cursor.rs  debug_log.rs  gemini.rs  install.rs  instructions.rs  mod.rs  opencode.rs  permission_engine.rs  permissions.rs  tests.rs  types.rs  windsurf.rs
crates/tokf-cli/src/issue_cmd/: mod.rs  tests.rs
crates/tokf-cli/src/remote/: account_client.rs  client.rs  filter_client.rs  gain_client.rs  (+7 more)
crates/tokf-cli/tests/: auth_client.rs  auth_credentials.rs  calibration.rs  cli_auth.rs  cli_baseline.rs  cli_cache.rs  cli_check.rs  cli_completions.rs  cli_config.rs  cli_doctor.rs  cli_generic.rs  cli_history.rs  cli_hook.rs  cli_hook_handle.rs  cli_hook_install.rs  cli_info.rs  cli_integration.rs  cli_issue.rs  cli_ls.rs  cli_publish.rs  cli_remote.rs  cli_rewrite.rs  cli_run.rs  cli_run_substitution.rs  cli_search.rs  cli_shell.rs  cli_show.rs  cli_telemetry.rs  cli_tracking.rs  cli_verify_scope.rs  config_resolution.rs  engine_gaps.rs  filter_lua.rs  remote_client.rs  remote_machine.rs  verify_cmd.rs  verify_richness.rs
crates/tokf-common/: CHANGELOG.md  Cargo.toml
crates/tokf-common/src/: canonical_v1.rs  examples.rs  hash.rs  lib.rs  multipart.rs  richness.rs  test_case.rs  tokens.rs
crates/tokf-common/tests/: canonical_v1.rs  canonical_v1_stdlib.txt  hash_corpus.rs
crates/tokf-filter/: CHANGELOG.md  Cargo.toml
crates/tokf-filter/src/: determinism.rs  examples.rs  lib.rs  verify.rs
crates/tokf-hook-types/: CHANGELOG.md  Cargo.toml
crates/tokf-hook-types/src/: config.rs  engine.rs  format.rs  lib.rs  verdict.rs
crates/tokf-server/: CHANGELOG.md  Cargo.toml  docker-compose.yml
crates/tokf-server/migrations/: 20250223000000_initial_schema.sql  20260223000001_device_flows.sql  20260226000000_add_savings_pct.sql  20260226000001_add_filter_stats_index.sql  20260226000002_usage_sync.sql  20260301000000_stdlib_publish.sql  20260302000000_savings_pct_to_percentage.sql  20260302000001_tos_and_account_deletion.sql  20260304000000_add_safety_passed.sql  20260304000001_add_examples_generated_at.sql  20260306000000_add_raw_tokens.sql  20260307000000_add_stdlib_version.sql  20260308000000_filter_versioning.sql  20260308000001_filter_deprecated_index.sql  20260428000000_add_v1_hash.sql
crates/tokf-server/src/: catalog.rs  catalog_tests.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  rate_limit.rs  state.rs  tos.rs  verify.rs
crates/tokf-server/tests/: db_integration.rs  integration.rs
(+535 files in other folders)
