[package]
name = "tokf"
version = "0.1.0"
edition = "2024"
description = "Config-driven CLI tool that compresses command output before it reaches an LLM context"

[dependencies]
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
regex = "1"
anyhow = "1"
