[package]
name = "tokf"
version = "0.1.7"
edition = "2024"
description = "Config-driven CLI tool that compresses command output before it reaches an LLM context"
license = "MIT"
repository = "https://github.com/mpecan/tokf"
homepage = "https://tokf.net"
keywords = ["llm", "cli", "filter", "output", "tokens"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
toml = "1.0"
serde = { version = "1", features = ["derive"] }
regex = "1"
anyhow = "1"
dirs = "6"
serde_json = "1"
include_dir = { version = "0.7", features = ["glob"] }
rusqlite = { version = "0.38", features = ["bundled"] }
bincode = "1"
mlua = { version = "0.11.6", features = ["luau", "vendored", "error-send"] }
opentelemetry     = { version = "0.28", optional = true, features = ["metrics"] }
opentelemetry_sdk = { version = "0.28", optional = true, features = ["metrics"] }
opentelemetry-otlp = { version = "0.28", optional = true }
tokio             = { version = "1", optional = true, features = ["rt-multi-thread"] }

[features]
default = []
otel = ["otel-http"]
otel-http = [
  "dep:opentelemetry",
  "dep:opentelemetry_sdk",
  "dep:opentelemetry-otlp",
  "opentelemetry-otlp/http-proto",
  "opentelemetry-otlp/reqwest-blocking-client",
  "opentelemetry-otlp/metrics",
  "opentelemetry_sdk/metrics",
]
otel-grpc = [
  "dep:opentelemetry",
  "dep:opentelemetry_sdk",
  "dep:opentelemetry-otlp",
  "opentelemetry-otlp/grpc-tonic",
  "opentelemetry-otlp/metrics",
  "opentelemetry_sdk/metrics",
  "dep:tokio",
]

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }
tempfile = "3"
serial_test = "3"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
