[workspace]
members = ["crates/tokf-cli", "crates/tokf-common", "crates/tokf-filter", "crates/tokf-server", "crates/crdb-test-macro", "crates/e2e-tests"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/mpecan/tokf"
homepage = "https://tokf.net"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
