[package]
name = "e2e-tests"
version = "0.1.40"
edition.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dev-dependencies]
tokf = { path = "../tokf-cli", features = ["test-support"] }
tokf-server = { path = "../tokf-server", features = ["test-helpers"] }
tokf-common = { path = "../tokf-common" }
crdb-test-macro = { path = "../crdb-test-macro" }
sqlx = { version = "=0.9.0", default-features = false, features = ["postgres", "runtime-tokio", "tls-rustls-ring"] }
tokio = { version = "1", features = ["full", "test-util"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json", "blocking"] }
tempfile = "3"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.39", features = ["bundled"] }
axum = "0.8"

[lints]
workspace = true
