[package]
name = "tokf"
version = "0.2.52"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Config-driven CLI tool that compresses command output before it reaches an LLM context"
keywords = ["llm", "cli", "tokens", "ai", "context-window"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "tokf"
path = "src/main.rs"

[dependencies]
tokf-common = { path = "../tokf-common", version = "0.2.52", features = ["validation"] }
tokf-filter = { path = "../tokf-filter", version = "0.2.52" }
tokf-hook-types = { path = "../tokf-hook-types", version = "0.2.52" }
clap = { version = "4", features = ["derive", "env"] }
toml = "1.0"
serde = { version = "1", features = ["derive"] }
regex = "1"
anyhow = "1"
dirs = "6"
serde_json = "1"
include_dir = { version = "0.7", features = ["glob"] }
# Capped at 0.39.x: it uses libsqlite3-sys 0.37, the same range sqlx-sqlite 0.9
# allows (>=0.30.1, <0.38). rusqlite 0.40 pulls libsqlite3-sys 0.38, which
# collides with sqlx-sqlite on the `links = "sqlite3"` constraint in the
# workspace resolver. Bump together with sqlx once sqlx-sqlite allows 0.38.
rusqlite = { version = "0.39", features = ["bundled"] }
rkyv = { version = "0.8", features = ["bytecheck", "unaligned"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json", "blocking", "multipart", "query"] }
# keyring 4's default `v1` feature auto-selects the platform-native store
# (Keychain / Windows Credential Manager / zbus Secret Service). zbus is pure
# Rust, so no libdbus-1-dev is required on Linux CI/build hosts.
keyring = "4"
# Used by the in-memory test backend (see auth::credentials::use_mock_keyring).
keyring-core = "1"
open = "5"
uuid = { version = "1", features = ["v4"] }
gethostname = "1"
clap_complete = "4.5"
clap_complete_nushell = "4.5"
dialoguer = { version = "0.12", default-features = false }
which = "8"
rable = "0.2.1"
tempfile = "3"
opentelemetry     = { version = "0.32", optional = true, features = ["metrics"] }
opentelemetry_sdk = { version = "0.32", optional = true, features = ["metrics"] }
opentelemetry-otlp = { version = "0.32", optional = true }
tokio             = { version = "1", optional = true, features = ["rt-multi-thread"] }
tonic             = { version = "0.14", optional = true, default-features = false }

[features]
default = []
stdlib-publish = []
# Calibration only — off by default, never enabled by another crate.
tokenizer = ["tokf-common/tokenizer"]
test-support = []
otel = ["otel-http"]
otel-http = [
  "dep:opentelemetry",
  "dep:opentelemetry_sdk",
  "dep:opentelemetry-otlp",
  "opentelemetry-otlp/http-proto",
  "opentelemetry-otlp/reqwest-blocking-client",
  "opentelemetry-otlp/metrics",
  "opentelemetry_sdk/metrics",
  "opentelemetry_sdk/experimental_metrics_custom_reader",
]
otel-grpc = [
  "dep:opentelemetry",
  "dep:opentelemetry_sdk",
  "dep:opentelemetry-otlp",
  "opentelemetry-otlp/grpc-tonic",
  "opentelemetry-otlp/metrics",
  "opentelemetry_sdk/metrics",
  "opentelemetry_sdk/experimental_metrics_custom_reader",
  "dep:tokio",
  "dep:tonic",
]

[dev-dependencies]
tokf-dev = { path = ".", package = "tokf", features = ["test-support"] }
mockito = "1.7.2"
filetime = "0.2"
proptest = "1"

[lints]
workspace = true
