[package]
name = "tokf-common"
version = "0.2.52"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Shared types and utilities for the tokf CLI tool"
keywords = ["llm", "cli", "tokens", "ai", "context-window"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
# Required by `canonical_v1`. Pinned exactly because v1's hash output depends
# on the toml crate's emission for canonical bytes; any change to its
# emission (escape choices, float formatting, key ordering) silently changes
# every published hash. Per ADR-0002, version bumps must be gated by the
# frozen v1 corpus; if the corpus drifts, either stay pinned or ship v2.
toml = "=1.1.3"
regex = { version = "1", optional = true }
unicode-normalization = "0.1"
# Calibration-only, OFF by default (`tokenizer` feature). Fully offline:
# ships gzipped .tiktoken vocabs and decodes them in a build script (contrary
# to some claims, it is NOT build-script-free), no network, no model download.
# ~15 small transitive crates, several already in our tree (serde,
# regex-automata, memchr, unicode-normalization). MUST NOT be enabled by any
# workspace member unconditionally — cargo feature unification is additive and
# one such entry would drag the vocab build into every default build.
bpe-openai = { version = "0.3", optional = true }

[features]
default = []
# `toml` is an unconditional dependency (canonical_v1 needs it), so only the
# optional `regex` dep is gated here.
validation = ["dep:regex"]
# Calibration only. See crates/tokf-cli/tests/calibration.rs.
tokenizer = ["dep:bpe-openai"]

[lints]
workspace = true

[dev-dependencies]
ts-rs = "12"
